Fix full place view not showing the full picture

--- a/frontend/sass/components/_places.scss
+++ b/frontend/sass/components/_places.scss
@@ -13,7 +13,8 @@
 
   &__image {
     width: 100%;
-    height: 12.5rem;
+    height: 35rem;
+    object-fit: contain;
     margin-right: 1.5rem;
     margin-bottom: 3rem;
 
@@ -51,11 +52,11 @@
   width: 100%;
 }
 
-@media (min-width: 768px) {
-  .place-item__image {
-    height: 20rem;
-  }
-}
+// @media (min-width: 768px) {
+//   .place-item__image {
+//     height: 40rem; //POssibly change
+//   }
+// }
 
 .icon {
   height: 2.5rem;
