--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -52,7 +52,8 @@ body {
     text-align: center; }
   .place-item__image {
     width: 100%;
-    height: 12.5rem;
+    height: 35rem;
+    object-fit: contain;
     margin-right: 1.5rem;
     margin-bottom: 3rem; }
     .place-item__image img {
@@ -77,10 +78,6 @@ body {
 .map-container {
   height: 15rem;
   width: 100%; }
-
-@media (min-width: 768px) {
-  .place-item__image {
-    height: 20rem; } }
 
 .icon {
   height: 2.5rem;
